# cuttereng

./: .gitignore  Doxyfile  README.md  meson.build  meson.options  meson_options.txt  valgrind.supp
basic-app/: main.c  meson.build  project_configuration.json
basic-app/assets/materials/: sand.json  water.json
basic-app/assets/models/: fox.glb
basic-app/assets/shader/: shader.wgsl
basic-app/assets/shaders/: composition.wgsl  debug_grid.wgsl  deferred_lighting.wgsl  directional_light_shadow_map_to_gbuffer.wgsl  directional_light_space_depth_map.wgsl  shader.wgsl  skybox.wgsl  triangle.wgsl  water.wgsl
cuttereng/: meson.build
cuttereng/src/: assert.h  asset.c  asset.h  bitset.h  bitstream.c  bitstream.h  bytes.c  bytes.h  camera.c  camera.h  common.h  cuttereng.c  cuttereng.h  deflate.c  deflate.h  ecs.c  ecs.h  engine.c  engine.h  environment.h  event.h  filesystem.c  filesystem.h  filesystem_pd.c  fs.c  fs.h  gltf.c  gltf.h  hash.c  hash.h  image.c  image.h  input.c  input.h  json.c  json.h  log.c  log.h  memory.c  memory.h  (+11 more)
cuttereng/src/ecs/: ecs.c  ecs.h
cuttereng/src/environment/: environment.h  linux.c
cuttereng/src/filesystem/: linux.c
cuttereng/src/graphics/: camera.c  camera.h  light.h  mesh_instance.h  shape.h
cuttereng/src/math/: matrix.c  matrix.h  quaternion.c  quaternion.h  radians.h  vector.c  vector.h
cuttereng/src/platform/: linux.c
cuttereng/src/renderer/: default_pipeline.c  default_pipeline.h  font.c  font.h  material.c  material.h  mesh.c  mesh.h  render_graph.c  render_graph.h  renderer.c  renderer.h  resource_cache.c  resource_cache.h  shader.c  shader.h  transform.c  transform.h
cuttereng/tests/: asset.c  bitset.c  bitstream.c  bytes.c  ecs.c  gltf.c  hash_table.c  json.c  memory.c  png.c  test.h  test_runner.c  vec.c
cuttereng/tests/math/: matrix.c  quaternion.c  vector.c
cuttereng/tests/models/: t.txt
cuttereng/tests/renderer/: mesh.c
scripts/: generate-pdx.sh  generate-sim-pdx.sh
subprojects/: lisiblepng.wrap
